--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "injertebrate-example",
+  "name": "dialog-example",
   "version": "0.0.1",
   "dependencies": {
     "node-static": "0.6.0"
